--- a/config_template/config_tun.json
+++ b/config_template/config_tun.json
@@ -25,19 +25,19 @@
  {
    "servers": 
    [
-     {"tag": "dns_direct", "address": "223.5.5.5", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "➡️ 直连"},
-     {"tag": "dns_proxy", "address": "tls://8.8.8.8", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "🚀 节点选择"}
+     {"tag": "ali", "type": "https", "server": "223.5.5.5"},
+     {"tag": "dns_proxy", "type": "https", "server": "8.8.8.8", "detour": "🚀 节点选择"}
    ],
    "rules": 
    [
-     {"outbound": "any", "server": "dns_direct", "disable_cache": true},
-     {"clash_mode": "Direct", "server": "dns_direct"},
-     {"clash_mode": "Global", "server": "dns_proxy"},
-     {"rule_set": "geosite-cn", "action": "route","server": "dns_direct"},
+     {"clash_mode": "direct", "server": "ali"},
+     {"clash_mode": "global", "server": "dns_proxy"},
+     {"rule_set": "geosite-cn", "server": "ali"},
      {"rule_set": "geosite-geolocation-!cn", "server": "dns_proxy"}
    ],
    "final": "dns_proxy",
-   "strategy": "ipv4_only"
+   "strategy": "ipv4_only",
+   "independent_cache": true
 },
 
 "inbounds": [
@@ -87,6 +87,7 @@
  {
    "auto_detect_interface": true,
    "final": "🐠 兜底策略",
+   "default_domain_resolver": {"server": "ali"},
    "rules": 
    [
      {"action": "sniff"},
