--- a/config_template/config_tproxy.json
+++ b/config_template/config_tproxy.json
@@ -24,6 +24,8 @@
     "tag": "tproxy-in",
     "listen": "0.0.0.0",
     "listen_port": 7895
+    "bind_interface": "eth0",
+    "routing_mark": 666,
   }
 ],
 
@@ -99,8 +101,6 @@
     ],
     "final": "兜底策略",
     "auto_detect_interface": true,
-    "default_mark": 666,
-    "default_domain_resolver": {"server": "public"}
   },
     "log": {
     "disabled": false,
