--- a/config_template/config_tproxy.json
+++ b/config_template/config_tproxy.json
@@ -23,9 +23,9 @@
     "type": "tproxy",
     "tag": "tproxy-in",
     "listen": "0.0.0.0",
-    "listen_port": 7895
-    "bind_interface": "eth0",
-    "routing_mark": 666,
+    "listen_port": 7895,
+    "tcp_fast_open": true,
+    "udp_fragment": true
   }
 ],
 
